--- a/10_heterogen-chem-ggw.tex
+++ b/10_heterogen-chem-ggw.tex
@@ -1,8 +1,16 @@
-\documentclass[ngerman,twocolumn,DIV21,a4,10pt]{scrartcl}
+\documentclass[english,twocolumn,DIV21,a4,10pt]{scrartcl}
 \usepackage{babel}
 \usepackage{amsmath}
+\usepackage{graphicx}
 \usepackage{units}
-\usepackage{nomencl}
+\usepackage{nomencl} 
+\usepackage{color}
+
+\newcommand{\dr}{\Delta_\textrm{R}}
+%\newcommand{\eqref}{1}{(\ref{#1})}
+\newcommand{\dc}{{}^\circ\textrm{C}}
+
+
 \makenomenclature
 \begin{document}
 \title{Kommentare zum Praktikumsversuch: Heterogenes chemisches Gleichgewicht}
@@ -13,18 +21,11 @@ Es ist das Massenwirkungsgesetz auf das Zersetzungsgleichgewicht eines
 Nickel-Hexammin-Komplexes anzuwenden. Aus der Temperaturabhängigkeit
 der Gleichgewichtskonstanten sind die Standardreaktionsenergie, die
 Standardreaktionsenthalpie sowie die Standardreaktionsentropie zu
-ermittteln.
+ermitteln.
 \section{Begriffe}
-
 \printnomenclature
-\subsection{Reaktionenergie}
-\subsection{Reaktionenthalpie}
-\subsection{Freie Reaktionenergie}
-\subsection{Freie Reaktionenthalpie}
+\subsection{Thermodynamisches Potential}
 \subsection{Thermodynamisches Gleichgewicht}
-\newcommand{\dr}{\Delta_\textrm{R}}
-\newcommand{\eqref}{1}{(\ref{#1})}
-\newcommand{\dc}{{}^\circ\textrm{C}}
 \begin{itemize}
 \item konstante Temperatur, konstanter Druck: $\dr G = 0$
 \item konstantes Volumen $\dr F = 0$
@@ -36,16 +37,16 @@ festes Ni-Hexamminchlorid mit festem Diamminchlorid und Ammoniak in
 der Gasphase im Gleichgewicht stehen:
 
 \begin{align}
-\label{eqn:hex}
-\underbrace{[Ni(NH_3)_6]Cl_2}_s \rightarrow 
-\underbrace{[Ni(NH_3)_2]Cl_2}_s + \underbrace{4 NH_3}_g
+  \label{eqn:hex}
+  \underbrace{[Ni(NH_3)_6]Cl_2}_s \rightarrow 
+  \underbrace{[Ni(NH_3)_2]Cl_2}_s + \underbrace{4 NH_3}_g
 \end{align}
 
 Da feste (s) und gasförmige (g) Phasen beteiligt sind, spricht man von
 einem ``heterogenen Gleichgewicht''.  Das Massenwirkungsgesetz für
 Gl.\eqref{eqn:hex} lautet:
 \begin{align}
-K(T) = \frac{a_\textrm{Diammin} \cdot a^4_{NH_3}}{a_\textrm{Hexammin}}
+  K(T) = \frac{a_\textrm{Diammin} \cdot a^4_{NH_3}}{a_\textrm{Hexammin}}
 \end{align}
 wobei $a$ die \nomenclature{Aktivit\"at}{bla} Aktivit\"aten der
 jeweiligen Stoffe und $K(T)$ die temperaturabhängige
@@ -57,11 +58,11 @@ Substanz kleiner als 1 w\"are), ist die Molenbruchaktivit\"at gleich
 unter einem Druck von $p = \unit[10^5]{Pa} = \unit[1]{Bar}$ gewählt,
 ist die Aktivit\"at
 \begin{align}
-a_{NH_3}=\frac{p_{NH_3}}{p^\theta},
+  a_{NH_3}=\frac{p_{NH_3}}{p^\theta},
 \end{align}
 so dass das Massenwirkungsgesetz die einfache Form
 \begin{align}
-K(T)=\left(\frac{p_{NH_3}}{p^\theta}\right)^4
+  K(T)=\left(\frac{p_{NH_3}}{p^\theta}\right)^4
 \end{align}
 annimmt. Die Temperaturabhängigkeit der Gleichgewichtskonstanten
 ergibt sich direkt aus der Messung des $NH_3-$Gleichgewichtsdruckes
@@ -71,17 +72,17 @@ Der Versuch wird bei konstantem Volumen durchgeführt. Für die
 Gleichgewichtskonstante $K$ gilt dann folgende Beziehung (Lehrbücher
 der Physikal. Chemie):
 \begin{align}
-\label{eqn:frei}
-\dr F^\theta = -RT\ln K.
+  \label{eqn:frei}
+  \dr F^\theta = -RT\ln K.
 \end{align}
 Unter Verwendung der Gibbs-Helmholtz-Gleichung
 \begin{align}
-\label{eqn:frei2}
-\dr F^\theta = \dr U^\theta - T \cdot \dr S^\theta
+  \label{eqn:frei2}
+  \dr F^\theta = \dr U^\theta - T \cdot \dr S^\theta
 \end{align}
 ergibt sich
 \begin{align}
-\ln K = -\frac{\dr U^\theta}{R}\frac{1}{T} + \frac{\dr S^\theta}{R}.
+  \ln K = -\frac{\dr U^\theta}{R}\frac{1}{T} + \frac{\dr S^\theta}{R}.
 \end{align}
 Unter der (im benutzten engen Temperaturintervall in guter Näherung
 erfüllten) Voraussetzung, dass RU und R S temperaturunabhängig sind,
@@ -116,8 +117,8 @@ A constant pressure in reaction \ref{eqn:hex} corresponds to the
 equilibrium in the free enthalpy $\dr G=0$. In this case equations
 \eqref{eqn:frei} and \eqref{eqn:frei2} are replaced by
 \begin{align}
-\dr G^\theta &= -RT \ln K \\
-\ln K &= - \frac{\dr H^\theta}{R} \frac{1}{T} + \frac{\dr S^\theta}{R}
+  \dr G^\theta &= -RT \ln K \\
+  \ln K &= - \frac{\dr H^\theta}{R} \frac{1}{T} + \frac{\dr S^\theta}{R}
 \end{align}
 The enthalpy $\dr H^\theta=\dr U^\theta + p \dr V^\theta$ contains an
 additional term that corresponds to the work that is necessary to
@@ -126,7 +127,7 @@ approximation for $NH_3$ and we can determine the work. According to
 \eqref{eqn:hex}, \unit[1]{mol} of hexammin reacts to \unit[4]{mol} of
 $NH_3$ gas.
 \begin{align}
-\dr V&= 4V_{NH_3}=4RT/p.
+  \dr V&= 4V_{NH_3}=4RT/p.
 \end{align}
 \section{Tasks}
 \begin{enumerate}
@@ -140,4 +141,16 @@ $NH_3$ gas.
   equilibrium constant $K(T)$ and the molar reaction enthalpy $\dr
   H^\theta(T)$ for $T\in\{25\dc,75\dc,125\dc,175\dc\}$.
 \end{enumerate}
+
+\begin{figure}
+  \centering
+  % \input{kapillare.eps_tex}
+  \includegraphics{kapillare.eps}
+  \caption{Sketch of the setup. The hexammine powder is hermetically
+    sealed and can be heated to constant temperature using an embedded
+    semiconductor temperature sensor. There is also a more precise
+    resistive temperature sensor close to the center of the powder.}
+   \label{fig:kapillare}
+ \end{figure}
+ 
 \end{document}
